--- a/financasPessoais.html
+++ b/financasPessoais.html
@@ -7,17 +7,24 @@
     <title>Finanças Pessoais</title>
 </head>
 <body id="body2">
-    <span class="menu">Menu</span>
-    <header class="header">
+    <div class="barraLateralEsquerda">
+        <div class="menuBar">
+            <div class="mobile-menu">
+                <div class="linha1"></div>
+                <div class="linha2"></div>
+                <div class="linha3"></div>
+            </div>
 
-                <ul class="dropdown">
-                    <li>Renda</li>
-                    <li>Metas</li>
-                    <li>Fazer Orçamento</li>
-                    <li>Contas</li>
-                    <li onclick="window.location.href='index.html';" class="back">Voltar</li>
-                </ul>
-    </header>
-</body>
+            <ul class="nav-list">
+                <li>Renda</li>
+                <li>Orçamento</li>
+                <li>Contas</li>
+                <li>Metas</li>
+                <li onclick="window.location.href='index.html';" class="back">Voltar</li>
+            </ul>
+        </div>
+    </div>
+
 <script src="App.js"></script>
+<script src="mobile-navbar.js"></script>
 </html>
