arrumar o js das perguntas

--- a/financasPessoais.html
+++ b/financasPessoais.html
@@ -24,7 +24,18 @@
             </ul>
         </div>
     </div>
+    <div class="questions">
+        <div class="caixaPerguntas">
+            <h3 id="pergunta1">Renda ativa<br><input type="number" name="rendaAtiva" id=""></h3>
+            <h3 id="pergunta2">Renda passiva<input type="number" name="rendaPassiva" id=""></h3>
+            <h3 id="pergunta3">Renda extra<input type="number" name="rendaExtra" id=""></h3>
+            <h3 id="pergunta4">Renda vitalícia<input type="number" name="rendaVitalicia" id=""></h3>
+            
+        </div>
+        <button class="button">➞</button>
+    </div>
 
 <script src="App.js"></script>
 <script src="mobile-navbar.js"></script>
+<script src="questions.js"></script>
 </html>
